# paperloom

./: .coverage  .gitignore  cli.py  pyproject.toml
paperloom/: config.py
paperloom/application/: services.py
paperloom/application/ports/: embedding_model.py  paper_extractor.py
paperloom/application/ports/persistence/: repository.py  unit_of_work.py  vector_repository.py
paperloom/domain/: model.py
paperloom/infrastructure/: embedding_model.py  paper_extractor.py
paperloom/infrastructure/persistence/: orm.py  repository.py  unit_of_work.py  vector_repository.py
tests/: conftest.py
tests/application/: test_services.py
tests/domain/: test_model.py
tests/infrastructure/: test_embedding_model.py  test_paper_extractor.py
tests/infrastructure/persistence/: test_repository.py  test_unit_of_work.py  test_vector_repository.py
